[package]
authors = ["Andy Russell <arussell123@gmail.com>"]
name = "coverage"
version = "0.1.0"

[dependencies]
difference = "0.4.1"
docopt = "0.6.74"
hyper = "0.7"
docopt_macros = "0.6.81"
lazy_static = "0.1"
regex = "0.1.41"
rustc-serialize = "0.3.16"
term = "0.2.12"
url = "0.5.5"
walkdir = "0.1.3"

[dependencies.rust-rosetta]
path = ".."
version = "*"
