[package]
authors = ["Andy Russell <arussell123@gmail.com>"]
name = "coverage"
version = "0.1.0"

[dependencies]
difference = "0.4.1"
docopt = "0.6.74"
docopt_macros = "0.6.81"
hyper = "0.9.3"
lazy_static = "0.2"
regex = "0.1.41"
rustc-serialize = "0.3.16"
serde = "0.7.0"
serde_macros = "0.7.0"
term = "0.4"
url = "1.1.0"
walkdir = "0.1.3"

[dependencies.rust-rosetta]
path = ".."
version = "*"
