[package]
name = "meta"
version = "0.1.0"

[dependencies]
cargo_metadata = "0.4"
failure = "0.1"
lazy_static = "0.2.1"
pathdiff = "0.1"
percent-encoding = "1"
rand = "0.5"
regex = "0.2"
reqwest = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
walkdir = "2"

find-unimplemented-tasks = { path = "../tasks/rosetta-code/find-unimplemented-tasks" }
