[package]
name = "meta"
version = "0.1.0"

[dependencies]
cargo_metadata = "0.6"
failure = "0.1"
lazy_static = "1"
pathdiff = "0.1"
percent-encoding = "1"
rand = "0.5"
regex = "1"
reqwest = "0.9.11"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
walkdir = "2"

find-unimplemented-tasks = { path = "../tasks/rosetta-code/find-unimplemented-tasks" }
