[package]
name = "meta"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
cargo_metadata = "0.6"
find-unimplemented-tasks = { path = "../tasks/rosetta-code/find-unimplemented-tasks" }
lazy_static = "1"
pathdiff = "0.1"
percent-encoding = "1"
rand = "0.7.2"
regex = "1"
reqwest = "0.10.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
walkdir = "2"
