[package]
name = "angle-difference-between-two-bearings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Angle_difference_between_two_bearings"