[package]
name = "egyptian-fractions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer= "0.1.44"
num-bigint = "0.4.3"
num-traits = "0.2.15"

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Egyptian_fractions"
