[package]
name = "hickerson-series-of-almost-integers"
version = "0.1.0"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorial = "0.2.0"
decimal = "2.0.4"

[package.metadata.rosettacode]
url = "https://rosettacode.org/wiki/Hickerson_series_of_almost_integers"
