[package]
name = "mouse-position"
version = "0.1.0"

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Mouse_position"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.6"
user32-sys = "0.2.0"

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.6.0", features = ["xlib"], optional = true }
