[package]
name = "mouse-position"
version = "0.1.0"
edition = "2021"

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Mouse_position"

[target.'cfg(windows)'.dependencies.windows]
version = "0.38.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.20.1", features = ["xlib"], optional = true }
