[package]
name = "phrase-reversals"
version = "0.1.0"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rosettacode]
url = "https://rosettacode.org/wiki/Phrase_reversals"
