[package]
name = "snake"
version = "0.1.0"
edition = "2021"
authors = ["Vladimir Shardinov <vvshard@gmail.com>"]

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Snake"

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.9", features = ["gui", "user"] }
rand = "0.8.4"
