[package]
name = "water-collected-between-towers"
version = "0.1.0"
authors = ["Gary Pennington <garypen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.rosettacode]
url = "https://rosettacode.org/wiki/Water_collected_between_towers"
