[package]
name = "write-to-a-windows-event-log"
version = "0.1.0"
edition = "2021"

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Write_to_Windows_event_log"

[target.'cfg(windows)'.dependencies.windows]
version = "0.38.0"
features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_EventLog",
  "Win32_System_Threading",
]
