[package]
name = "count-examples"
version = "0.1.0"
edition = "2018"

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Rosetta_Code/Count_examples"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
