[package]
name = "find-unimplemented-tasks"
version = "0.1.0"

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Rosetta_Code/Find_unimplemented_tasks"

[dependencies]
rustc-serialize = "0.3"
url = "1.1.0"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
default-features = false
features = ["tls"]
