[package]
name = "find-unimplemented-tasks"
version = "0.1.0"
edition = "2018"

[package.metadata.rosettacode]
url = "http://rosettacode.org/wiki/Rosetta_Code/Find_unimplemented_tasks"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
